--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
         .background-animation > div {
             width: 100% !important;
             height: 100% !important;
-            min-height: 100vh !important;
             pointer-events: auto;
         }
 
@@ -61,6 +60,7 @@
             opacity: 0;
             position: relative;
             z-index: 1;
+            margin: 0 auto;
         }
 
         .logo {
@@ -165,7 +165,7 @@
 </head>
 <body>
     <div class="background-animation">
-        <div data-us-project="AcHG5ILtLnhir9WAUGoZ" style="width:1440px; height: 900px"></div><script type="text/javascript">!function(){if(!window.UnicornStudio){window.UnicornStudio={isInitialized:!1};var i=document.createElement("script");i.src="https://cdn.jsdelivr.net/gh/hiunicornstudio/unicornstudio.js@v1.5.3/dist/unicornStudio.umd.js",i.onload=function(){window.UnicornStudio.isInitialized||(UnicornStudio.init(),window.UnicornStudio.isInitialized=!0)},(document.head || document.body).appendChild(i)}}();</script>
+        <div data-us-project="AcHG5ILtLnhir9WAUGoZ" style="width:100%; height:100%;"></div><script type="text/javascript">!function(){if(!window.UnicornStudio){window.UnicornStudio={isInitialized:!1};var i=document.createElement("script");i.src="https://cdn.jsdelivr.net/gh/hiunicornstudio/unicornstudio.js@v1.5.3/dist/unicornStudio.umd.js",i.onload=function(){window.UnicornStudio.isInitialized||(UnicornStudio.init(),window.UnicornStudio.isInitialized=!0)},(document.head || document.body).appendChild(i)}}();</script>
     </div>
     <div class="container">
         <div class="logo">
@@ -183,5 +183,3 @@
     </div>
 </body>
 </html>
-
-
