--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <img src="FInal.png" alt="FloSlate" />
         </div>
         <h2 class="subheadline">Design that feels alive, considered, and precise.</h2>
-        <p class="paragraph">Fresh yet reliable. Empathetic yet bold. We design and build thoughtful, functional websites that are alive — balancing creativity with clarity.</p>
+        <p class="paragraph">Fresh yet reliable. Empathetic yet bold. We design and build thoughtful, functional websites that are alive, balancing creativity with clarity.</p>
         <div class="status">Our website is coming soon.</div>
         <a href="mailto:nihal@floslate.agency" class="contact">
             nihal@floslate.agency
